OWH-219: hook into backend, move collapse arrow, fix NaN bug

--- a/software/owh/client/app/css/app.css
+++ b/software/owh/client/app/css/app.css
@@ -1027,7 +1027,6 @@ body {
 /* YRBS Table */
 
 .owh-question__expand {
-    float: right;
     color: white;
 }
 
